# validator-lanki

./: .gitignore  GUIDE.md  README.md  pyproject.toml
backend/: requirements.txt
backend/app/: cli.py  deps.py  main.py  paths.py
backend/app/auth/api/: router.py
backend/app/auth/app/: schemas.py  service.py
backend/app/auth/domain/: entity.py
backend/app/auth/infra/: repository.py
backend/app/categories/app/: schemas.py  service.py
backend/app/categories/domain/: entity.py
backend/app/categories/infra/: repository.py
backend/app/core/: config.py  database.py  models.py  security.py
backend/app/manufacturers/api/: router.py
backend/app/manufacturers/app/: schemas.py  service.py
backend/app/manufacturers/domain/: entity.py
backend/app/manufacturers/infra/: repository.py
backend/app/orders/api/: router.py
backend/app/orders/app/: schemas.py  service.py
backend/app/orders/domain/: entity.py
backend/app/orders/infra/: repository.py
backend/app/products/api/: router.py
backend/app/products/app/: schemas.py  service.py
backend/app/shared/: roles.py  storage.py
backend/database/: ER.md  SCHEMA.md  init.sql
examen3_mini_shop-0.1.0/: MANIFEST.in  PKG-INFO  README.md
examen3_mini_shop-0.1.0/backend/app/: cli.py  main.py  paths.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/http/: client.js
frontend/src/assets/: style.css
frontend/src/composables/: useDialog.js
frontend/src/router/: index.js
frontend/src/store/: auth.js
scripts/: build_package.py
(+40 files in other folders)
