[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "examen3-mini-shop"
version = "0.1.0"
description = "Мини интернет-магазин: Vue 3 + FastAPI + SQLAlchemy + SQLite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Examen3" }]
keywords = ["fastapi", "vue", "shop", "sqlite", "exam"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.1",
    "python-multipart==0.0.20",
    "pydantic-settings==2.7.0",
    "email-validator==2.2.0",
]

[project.urls]
Homepage = "https://github.com/yourname/examen3"
Documentation = "https://github.com/yourname/examen3#readme"

[project.scripts]
mini-shop = "app.cli:main"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
app = [
    "frontend/package.json",
    "frontend/package-lock.json",
    "frontend/vite.config.js",
    "frontend/index.html",
    "frontend/src/**/*",
]

[tool.setuptools.exclude-package-data]
app = [
    "frontend/node_modules/**",
    "frontend/dist/**",
]
